2004-11-11  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkstatusbar.c (gtk_statusbar_size_allocate): Also
	reserve space for the resize grip if the grip_window is not
	realized yet.  (#158010, Christian Persch)
	(gtk_statusbar_button_press): Only start a resize if the
	button press comes from the grip_window.  (#158011, Christian Persch)

2004-11-11  Tor Lillqvist  <tml@iki.fi>

	Fix for #137551, by Robert Ögren:

	* gdk/win32/gdkevents-win32.c (generate_focus_event): New function.

	(gdk_keyboard_grab, gdk_keyboard_ungrab): Generate focus change
	events.
	
	(gdk_event_translate): Check for keyboard grabs and not pointer
	grabs when handling WM_{SET,KILL}FOCUS. Use generate_focus_event().

2004-11-11  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkuimanager.c (update_node): Remove two more places
	where we were unconditionally setting "visible", causing
	unnecessary notifications.
	(update_node): Fix some C99isms.

	* gtk/gtkclipboard.c (gtk_clipboard_get_for_display): 
	(gtk_clipboard_get): Clarify the docs.  (#156638, Torsten 
	Schoenfeld)
	(gtk_clipboard_finalize): Warn if the clipboard is still in
	its displays clipboard list.

	Considerably speed up GtkUIManager, by changing the semantics
	of the dirty flag. It is now propagated up the tree, and
	update_node() doesn't descend into clean subtrees.  (#143668,
	Dave Neary, Michael Natterer, Sven Neumann, fix proposed
	by Soeren Sandmann)
	
	* gtk/gtkuimanager.c (node_prepend_ui_reference): Only prepend 
	a new node reference if the merge_id is different. Take a GNode,
	so we can walk up the tree, adjust all callers. 
	(node_remove_ui_reference): Only mark a node dirty if the first 
	ui reference is removed. Take a GNode here as well for 
	consistency. 
	(update_node): Don't descend into clean subtrees.
	(mark_node_dirty): New function to mark a node and its 
	predecessors dirty.

Thu Nov 11 11:34:32 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkfilechooserbutton.c (update_idler): return FALSE instead